<resources>
    <string name="app_name">Sample Constraint Layout</string>
    <string name="Labellogin">Login</string>
    <string name="Labelprofil">User Profile</string>
    <string name="tEmail">Email</string>
    <string name="tPasswords">Passwords</string>
    <string name="bsingin">Sing-In</string>
    <string name="mnsingup">Sing-Up</string>
    <string name="Labelsingup">Buat Akun Baru</string>
    <string name="upnama">Masukan Nama</string>
    <string name="upemail">Masukan e-Mail</string>
    <string name="uppass">Masukan Password</string>
    <string name="uprepass">Ulangi password</string>
    <string name="upaddress">Masukan Alamat</string>
    <string name="bsingup">Sing-Up</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomer Telepon</string>
</resources>