<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LihatDataActivity">

    <TextView
        android:id="@+id/textDetailkontak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detailkontak"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/textlabelDatanama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNama"
        app:layout_constraintEnd_toEndOf="@+id/tvNama"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNama" />

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDetailkontak"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/textlabelDataNotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notel"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNotel"
        app:layout_constraintEnd_toEndOf="@+id/tvNotel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNotel" />

    <TextView
        android:id="@+id/tvNotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvNama"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="@+id/tvNama"
        app:layout_constraintTop_toBottomOf="@+id/tvNama"
        app:layout_constraintVertical_bias="0.194" />
</androidx.constraintlayout.widget.ConstraintLayout>